# pysbe

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  run_benchmarks.py
benchmarks/results/: baseline.json  phase7-report.md
benchmarks/schemas/: phase7-benchmark.xml
scripts/: bootstrap_dev.sh  check_perf_regression.py
src/pysbe/: __init__.py  __main__.py  cli.py  fixtures.py  generate.py
src/pysbe/codegen/: __init__.py  emitter.py  generate.py  naming.py  templates.py
src/pysbe/interop/: __init__.py  java.py
src/pysbe/ir/: __init__.py  generator.py  model.py  traversal.py
src/pysbe/parser/: __init__.py  validation.py  xml_parser.py
src/pysbe/runtime/: __init__.py  buffer.py  enums.py  errors.py  flyweight.py  group.py  primitives.py  vardata.py
tests/: conftest.py
tests/fixtures/: README.md  manifest.json
tests/fixtures/schemas/: java-interop.xml
tests/integration/: test_java_interop.py
tests/unit/: test_cli.py  test_codegen.py  test_fixtures.py  test_generate.py  test_ir.py  test_java_interop_prereq.py  test_parser.py  test_phase5_features.py  test_runtime.py
