[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pysbe"
version = "0.1.0"
description = "Python Simple Binary Encoding codec generator and runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "pysbe contributors" }]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.8",
]

[project.scripts]
pysbe = "pysbe.cli:entrypoint"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true
disallow_untyped_defs = true
no_implicit_optional = true
